--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <body>
   <main>
     <div id="card-wrapper">
+
       <div id="sedan">
+        <img src="images/icon-sedans.svg" alt="sedan-icon">
         <h1>SEDANS</h1>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
           or on your next road trip.</p>
@@ -28,6 +30,7 @@
       </div>
       
       <div id="suv">
+        <img src="images/icon-suvs.svg" alt="sedan-icon">
         <h1>SUVS</h1>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
           and off-road adventures.</p>
@@ -37,6 +40,7 @@
       
   
       <div id="luxury">
+        <img src="images/icon-luxury.svg" alt="sedan-icon">
         <h1>LUXURY</h1>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
           rental and arrive in style.</p>
